<resources>
    <string name="app_name">Stock Price</string>

    <!-- Titles -->
    <string name="titleChart">Chart</string>
    <string name="titleNews">News</string>
    <string name="titleForecasts">Forecasts</string>
    <string name="titleIdeas">Ideas</string>
    <string name="titleStocks">Stocks</string>
    <string name="titleFavourite">Favourite</string>
    <string name="titleSummary">Summary</string>
    <string name="titlePopularRequests">Popular requests</string>
    <string name="titleYourSearches">You\'ve searched for this</string>
    <string name="titleChartCardDays">D</string>
    <string name="titleChartCardWeeks">W</string>
    <string name="titleChartCardMonths">M</string>
    <string name="titleChartCardHalfYear">6M</string>
    <string name="titleChartCardYear">1Y</string>
    <string name="titleChartCardAll">All</string>
    <string name="titleStockPriceObserver">Stock price live-time updater</string>
    <string name="titleChannelStockPrice">Price live time updater</string>
    <string name="titleProfile">Profile</string>

    <!-- Errors -->
    <string name="errorLoadingData">Error loading data</string>
    <string name="errorLiveTimeDataLoad">Error live-time data loading. Market could be closed. Try later</string>
    <string name="errorLoadCompanyQuote">Error loading %s quote</string>
    <string name="errorFavouriteCompaniesLimit">You reached the limit(50) of favourite companies</string>
    <string name="errorLoadSearchesHistory">Error loading search requests history</string>
    <string name="errorPrepareData">An error occurred while trying to load data. Try reinstall the app or clear cache</string>
    <string name="errorLoadStockCandles">Error loading %s data</string>
    <string name="errorLoadCompanyNews">Error loading %s news</string>
    <string name="errorApiLimit">Api limit reached. Please try again in a minute</string>
    <string name="errorNetwork">Network is not available</string>
    <string name="errorNoAppToOpenUrl">App that can resolve it do not found</string>
    <string name="errorTooManyRequests">Too many requests. Please wait for a minute</string>
    <string name="errorSmthWentWrong">Something went wrong</string>
    <string name="errorDefault">Error</string>

    <!-- Descriptions -->
    <string name="descriptionBack">Navigate back</string>
    <string name="descriptionAddToFavourite">Add or remove from favourite</string>
    <string name="descriptionCompanyIcon">Company icon</string>
    <string name="descriptionScrollToTop">Scroll to top</string>
    <string name="descriptionIconClose">Clear search request</string>
    <string name="descriptionImageSearch">Search company or ticker</string>
    <string name="descriptionUserPhoto">User photo</string>

    <!-- Hints -->
    <string name="hintBuyFor">Buy for %s</string>
    <string name="hintFindCompany">Find company or ticker</string>
    <string name="hintOpenInBrowser">Open in browser:</string>
    <string name="hintStocks">Stocks</string>
    <string name="hintName">Name</string>
    <string name="hintWebsite">Website</string>
    <string name="hintCountry">Country:</string>
    <string name="hintIndustry">Industry: </string>
    <string name="hintPhone">Phone:</string>
    <string name="hintCapitalization">Capitalization:</string>
    <string name="hintPhoneEdit">Phone</string>
    <string name="hintEnterPhone">Enter phone number</string>
    <string name="hintEnterCode">Enter code</string>
    <string name="hintAreYouSure">Are you sure?</string>
    <string name="hintYes">Yes</string>
    <string name="hintSuccess">Success</string>
    <string name="hintNo">No</string>
    <string name="hintMenu">Menu</string>
    <string name="hintOk">OK</string>
    <string name="hintAuthorization">Successful authorization. From now, all your favorite
        stocks and search requests will be synced from the cloud.</string>

    <!-- Menu -->
    <string name="menuLogIn">Log In</string>
    <string name="menuLogOut">Log Out</string>
    <string name="menuNotes">Notes</string>
    <string name="menuStocks">Stocks</string>
    <string name="menuChats">Chats [Developing]</string>
    <string name="menuSettings">Settings</string>

    <string name="transitionSearchFragment">searchContainer</string>
    <string name="transitionAboutPager">Transition container about fragment pager</string>
    <string name="transitionStocksPager">Transition container stock fragment pager</string>

    <string name="notificationNewItems">New items loaded</string>
    <string name="hintMessages">Messages</string>
    <string name="descriptionAttach">Attach file</string>
    <string name="hintEnterMessage">Enter message</string>
    <string name="hintEnterLogin">Enter login</string>
    <string name="hintLogin">Login</string>
    <string name="hintWithLogin">With this login users will be able to find you</string>
    <string name="descriptionApply">Apply</string>

    <string name="errorBadLogin">Login must not contain ".#$[]"</string>
    <string name="errorLoginExists">Login is already exists</string>
    <string name="errorUndefined">Undefined error</string>

    <string name="errorLoadMessages">Messages for this user cannot be loaded</string>
    <string name="titleChats">Chats</string>
    <string name="hintEnterNumber">Enter user number</string>
    <string name="hintRegistration">Registration</string>
    <string name="descriptionAddPerson">Add person to chat</string>

    <string name="titleAuthorized">Authorized</string>
    <string name="titleNotAuthorized">Not authorized</string>
    <string name="descriptionSendMessage">Send message</string>
    <string name="hintAuthentication">Authentication by phone number</string>
    <string name="hintAuthenticationHelp">Authentication allows us to store your favorites companies in the cloud database. You will be able to log in from another device and sync this list</string>
    <string name="hintEnterUserPhone">Enter the phone number of the user with whom you want to create a chat</string>

    <string name="errorNotAuthorized">Before using chats you need to log in to identify</string>

    <string name="descriptionFabProfile">Profile</string>
    <string name="descriptionFabLogIn">Log in</string>

</resources>