<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            style="@style/textViewH2"
            android:layout_width="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="30dp"
            android:text="@string/hintEnterLogin" />

        <TextView
            style="@style/textViewH3Shadowed"
            android:layout_width="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginHorizontal="50dp"
            android:layout_marginTop="8dp"
            android:gravity="center"
            android:text="@string/hintWithLogin" />

        <com.google.android.material.textfield.TextInputLayout
            style="@style/materialEditTextInputLayout"
            android:layout_width="150dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="15dp"
            android:hint="@string/hintLogin">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editTextLogin"
                style="@style/editText"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:gravity="center" />

        </com.google.android.material.textfield.TextInputLayout>

        <ImageView
            android:id="@+id/imageViewIconCheck"
            style="@style/imageView"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:contentDescription="@string/descriptionApply"
            android:src="@drawable/ic_check_circle"
            app:tint="@color/grey" />

    </androidx.appcompat.widget.LinearLayoutCompat>

</ScrollView>