<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:transitionName="@string/transitionAboutPager">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBar"
        android:layout_width="0dp"
        android:layout_height="120dp"
        android:background="@color/white"
        android:elevation="@dimen/aboutPagerElevation"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewCompanySymbol"
        style="@style/textViewH2"
        android:layout_width="wrap_content"
        android:layout_marginTop="18dp"
        android:elevation="@dimen/aboutPagerElevation"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="AAPL" />

    <TextView
        android:id="@+id/textViewCompanyName"
        style="@style/textViewBodyConstrainedWidth"
        android:layout_marginHorizontal="26dp"
        android:layout_marginTop="4dp"
        android:elevation="@dimen/aboutPagerElevation"
        app:layout_constrainedWidth="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textViewCompanySymbol"
        tools:text="Apple Inc." />

    <ImageView
        android:id="@+id/imageViewBack"
        style="@style/clickableImage"
        android:layout_marginStart="9dp"
        android:contentDescription="@string/descriptionBack"
        android:elevation="@dimen/aboutPagerElevation"
        android:src="@drawable/ic_back"
        app:layout_constraintBottom_toBottomOf="@id/textViewCompanyName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/textViewCompanySymbol" />

    <ImageView
        android:id="@+id/imageViewStar"
        style="@style/clickableImage"
        android:layout_marginEnd="9dp"
        android:contentDescription="@string/descriptionAddToFavourite"
        android:elevation="@dimen/aboutPagerElevation"
        android:src="@drawable/ic_star"
        app:layout_constraintBottom_toBottomOf="@id/textViewCompanyName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/textViewCompanySymbol" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineTabsTopBorder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="84dp"
        app:layout_constraintTop_toBottomOf="@id/textViewCompanyName" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineTabsBottomBorder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="@id/appBar" />

    <HorizontalScrollView
        android:id="@+id/horizontalTabsContainer"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:elevation="@dimen/aboutPagerElevation"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@id/guidelineTabsBottomBorder"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/guidelineTabsTopBorder">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textViewChart"
                style="@style/textViewH3Tab"
                android:text="@string/titleChart"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textViewSummary"
                style="@style/textViewBodyShadowedTab"
                android:text="@string/titleSummary"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@id/textViewChart"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textViewNews"
                style="@style/textViewBodyShadowedTab"
                android:text="@string/titleNews"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@id/textViewSummary"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textViewForecasts"
                style="@style/textViewBodyShadowedTab"
                android:text="@string/titleForecasts"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@id/textViewNews"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textViewIdeas"
                style="@style/textViewBodyShadowedTab"
                android:text="@string/titleIdeas"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@id/textViewForecasts"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </HorizontalScrollView>

    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/viewPager"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/appBar" />

</androidx.constraintlayout.widget.ConstraintLayout>